Set a fixed height for confirmDeleteDialog so it isn't stretched in FF and IE (LT-158)

--- a/Packages/lesiontracker/client/components/confirmDeleteDialog/confirmDeleteDialog.styl
+++ b/Packages/lesiontracker/client/components/confirmDeleteDialog/confirmDeleteDialog.styl
@@ -7,7 +7,7 @@
   right: 0
   z-index: 100
   width: 300px
-  height: fit-content
+  height: 145px
   margin: auto
   border-radius: 5px
   padding: 10px 20px 10px 20px
